added my resume that can be downloaded using the button

--- a/index.html
+++ b/index.html
@@ -222,6 +222,12 @@
                 <button type="button">Submit <i class="fas fa-paper-plane"></i> </button>
             </form>
         </div>
+        <br><br>
+        <div class="download-button">
+            <a href="images/Resume.pdf" download="images/Resume.pdf">
+                <button>Download My Resume</button>
+            </a>
+        </div>
     </section>
 <br><br><br><br>
     <footer>
